// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox basic renders checked checkbox 1`] = `
<label
  className="toggleLabel label--minor display--block"
  htmlFor="hello"
>
  <WithLoading
    align="center"
    className="minTouchHeight"
  >
    <WithLoading
      shrink={true}
    >
      <input
        checked={true}
        className="checkbox visibility--a11yHide"
        id="hello"
        name="greeting"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
        value="hello"
      />
      <span
        className="display--block align--center fauxToggle fauxToggle--checkbox checked"
      >
        <Icon
          className="display--flex flex--center checkbox-indicator"
          shape="check"
          size="xs"
        />
      </span>
    </WithLoading>
    <WithLoading
      className="toggleLabel-container"
    >
      <span
        className="text--bold"
      >
        Hello!
      </span>
    </WithLoading>
  </WithLoading>
</label>
`;

exports[`Checkbox basic renders unchecked checkbox 1`] = `
<label
  className="toggleLabel label--minor display--block"
  htmlFor="hello"
>
  <WithLoading
    align="center"
    className="minTouchHeight"
  >
    <WithLoading
      shrink={true}
    >
      <input
        checked={false}
        className="checkbox visibility--a11yHide"
        id="hello"
        name="greeting"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
        value="hello"
      />
      <span
        className="display--block align--center fauxToggle fauxToggle--checkbox"
      />
    </WithLoading>
    <WithLoading
      className="toggleLabel-container"
    >
      <span
        className=""
      >
        Hello!
      </span>
    </WithLoading>
  </WithLoading>
</label>
`;
